# xapm

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sissi/lib/xapm/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
crashcatcher/: build.gradle.kts
crashcatcher/src/main/cpp/: CMakeLists.txt  nativecrashcatcher.cpp
crashcatcher/src/main/java/com/sissi/apm/crashcatcher/: CrashCatcher.kt
demo/: build.gradle.kts
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/sissi/lab/xapmdemo/: MainActivity.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hprof/demo/: build.gradle.kts
hprof/demo/src/main/: AndroidManifest.xml
hprof/demo/src/main/res/layout/: activity_main.xml
hprof/demo/src/main/res/values/: strings.xml  themes.xml
hprof/hprofclipper/: build.gradle.kts
hprof/hprofclipper/src/main/cpp/: CMakeLists.txt  hprof_strip.cpp  native_bridge.cpp
hprof/hprofclipper/src/main/cpp/include/: hprof_strip.h
hprof/hprofdumper/: build.gradle.kts
hprof/hprofdumper/src/main/cpp/: hprof_dump.cpp  kwai_dlfcn.cpp  native_bridge.cpp
hprof/hprofdumper/src/main/cpp/include/: map_util.hpp
hprofclipper/: build.gradle.kts
hprofclipper/src/main/: AndroidManifest.xml
hprofclipper/src/main/cpp/: CMakeLists.txt  hprof_strip.cpp
hprofdumper/: build.gradle.kts
hprofdumper/src/main/: AndroidManifest.xml
hprofdumper/src/main/cpp/: CMakeLists.txt  elf_reader.cpp
hprofdumper/src/main/cpp/include/: elf_wrapper.h  hprof_dump.h
hprofdumper/src/main/java/com/kwai/koom/fastdump/: ForkJvmHeapDumper.java
log/: build.gradle.kts
log/src/main/java/com/sissi/apm/log/: DefaultLogger.kt  KLog.kt  Logger.kt
log/src/main/java/com/tencent/mars/xlog/: Log.java  Xlog.java
oom/: build.gradle.kts
oom/demo/: build.gradle.kts
oom/demo/src/main/: AndroidManifest.xml
oom/demo/src/main/res/layout/: activity_main.xml
oom/demo/src/main/res/values/: strings.xml
oom/demo/src/main/res/values-night/: themes.xml
oom/procres/: build.gradle.kts
oom/src/main/java/com/sissi/apm/oom/: OomMonitor.kt
oom/src/main/java/com/sissi/lib/oom/: OomMonitor.kt
proc/: build.gradle.kts
proc/demo/: build.gradle.kts
proc/demo/src/main/: AndroidManifest.xml
proc/demo/src/main/res/layout/: activity_main.xml
proc/src/main/java/com/sissi/apm/proc/: CpuInfo.kt  FdInfo.kt  GcProbe.kt  MemInfo.kt  ThreadInfo.kt
(+17 files in other folders)
